--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,6 +25,21 @@ section {
   padding: 2rem 9%;
 }
 
+.btn {
+  display: inline-block;
+  margin-top: 1rem;
+  border-radius: 5rem;
+  background: #333;
+  color: #fff;
+  padding: 0.9rem 3.5rem;
+  cursor: pointer;
+  font-size: 1.7rem;
+}
+
+.btn:hover {
+  background: var(--blue);
+}
+
 header {
   position: fixed;
   top: 0;
@@ -84,6 +99,35 @@ header .fa-bars {
 }
 
 .home {
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+  background: url(../component/background.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.home .content {
+  max-width: 50rem;
+}
+
+.home .content h3 {
+  font-size: 6rem;
+  color: #333;
+}
+
+.home .content span {
+  font-size: 3.5rem;
+  color: var(--blue);
+  padding: 1rem 0;
+  line-height: 1.5;
+}
+
+.home .content p {
+  font-size: 1.5rem;
+  color: #666;
+  padding: 1rem 0;
+  line-height: 1.5;
 }
 
 /* media query */
